change fix for overflow x clip

--- a/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.css
@@ -1,3 +1,8 @@
+.tab-bar_list-container {
+  /* Prevents horizontal scrollbar from appearing when tabs overflow */
+  overflow-x: clip;
+}
+
 .tab-bar_dropdown {
   max-width: 150px;
 }
